separating wav cropping and spectogram plotting into two different notebooks

--- a/Crop_wav.ipynb
+++ b/Crop_wav.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,23 +28,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Choose file to inspect¶"
+    "### Choose file to inspect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff5849be57b44d1e8601c899cd661cc7",
+       "model_id": "7b723c00449248e0bc1fd884d6837c4a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='CSV files:', options=('time_stamps.csv', 'time_stamps_2017-02-04--10-14-06--00-16-35--BC…"
+       "Dropdown(description='CSV files:', options=('call_data_2017-02-04--10-14-06--00-16-35--BC_2.csv', 'time_stamps…"
       ]
      },
      "metadata": {},
@@ -54,6 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "time_stamps_2017-02-04--10-14-06--00-16-35--BC_2.csv\n",
       "time_stamps_2017-02-04--10-14-06--00-16-35--BC.csv\n"
      ]
     }
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,38 @@
     "time_stamps=pd.read_csv(filename, index_col=0)\n",
     "\n",
     "# Also extract recording name for later use\n",
-    "recording_name=file[0][12:-4]"
+    "recording_name=file[0][12:-4]\n",
+    "\n",
+    "#recording_name='2017-02-04--10-14-06--00-16-35--BC'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please check sampling rate manually in the metadata file and set below in Hz! \n",
+      "100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    wave_file=wave.open(file[0], \"rb\")\n",
+    "    sample_rate = wave_file.getframerate()\n",
+    "except:\n",
+    "    sample_rate=int(input('Please check sampling rate manually in the metadata file and set below in Hz! \\n'))"
    ]
   },
   {
@@ -106,11 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y, sr = librosa.load(recording_name + '.wav')"
+    "y, sr = librosa.load(recording_name + '.wav', sr=sample_rate)"
    ]
   },
   {
@@ -124,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,55 +219,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function for converting wavs into spectrograms"
+    "### Create metadata files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def open_wav(row):\n",
-    "    y, sr = librosa.load(row.call_wav)\n",
-    "    return y, sr, row.call_wav"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def wav_to_spect(y, sr, call_wav):\n",
-    "    \n",
-    "    if len(y)>0:\n",
-    "        # Convert to spectogram \n",
-    "        Y = librosa.stft(y)\n",
-    "        Ydb = librosa.amplitude_to_db(abs(Y))\n",
-    "\n",
-    "        plt.imshow(Ydb, aspect=0.3, origin='lower')\n",
-    "        plt.xlabel('time(samples)')\n",
-    "        plt.ylabel('Hz')\n",
-    "\n",
-    "        # Save spectograms\n",
-    "        plt.savefig(call_wav[:-3] + 'png')\n",
-    "        plt.close()\n",
-    "    \n",
-    "        return Ydb\n",
-    "    \n",
-    "    else: \n",
-    "        return 'Error with wav'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_stamps['spect']=time_stamps.apply(lambda x: wav_to_spect(*open_wav(x)), axis=1) "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -246,12 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_stamps.to_csv('call_data_' + recording_name + '.csv')"
+    "time_stamps.to_csv('call_data_' + recording_name + '_2'+ '.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
