--- a/Interactive_plot.ipynb
+++ b/Interactive_plot.ipynb
@@ -29,7 +29,8 @@
     "import librosa\n",
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets\n",
+    "import wave"
    ]
   },
   {
@@ -41,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c096d10514b84df5afa36c612094f8bf",
+       "model_id": "382983e684ab4208bcc28cfe61cacbb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "whale_cropped_test.wav\n"
+      "2017-02-04--10-14-06--00-16-35--BC.wav\n"
      ]
     }
    ],
@@ -89,26 +90,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Read metadata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    wave_file=wave.open(file[0], \"rb\")\n",
+    "    sample_rate = wave_file.getframerate()\n",
+    "except:\n",
+    "    ('Please check sampling rate manually and set below!')\n",
+    "    sample_rate=100000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Read in wav file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of data points: 1166478, fs: 22050 Hz, resulting file length: 0.8816916099773242 min.\n"
+      "Number of data points: 99500996, fs: 100000 Hz, resulting file length: 16.583499333333332 min.\n"
      ]
     }
    ],
    "source": [
     "# Read in wav\n",
     "filename = directory + file[0]\n",
-    "y, sr = librosa.load(filename)\n",
+    "y, sr = librosa.load(filename, sr=sample_rate)\n",
     "print('Number of data points: {}, fs: {} Hz, resulting file length: {} min.'.format(np.shape(y)[0], sr, np.shape(y)[0]/sr/60))"
    ]
   },
@@ -121,13 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9438d869d220428f9e512b92c0497335",
+       "model_id": "8550ed2585344eefab4ad8a63af01b32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,7 +164,7 @@
    "source": [
     "# Display wav\n",
     "plt.figure(figsize=(20, 5))\n",
-    "#librosa.display.waveshow(y, sr)\n",
+    "librosa.display.waveshow(y, sr)\n",
     "plt.show()"
    ]
   },
@@ -155,13 +177,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert to spectogram \n",
-    "Y = librosa.stft(y)\n",
-    "Ydb = librosa.amplitude_to_db(abs(Y))"
+    "Y = librosa.stft(y) \n",
+    "#Ydb = librosa.amplitude_to_db(abs(Y), ref=1)\n",
+    "Ydb = librosa.amplitude_to_db(Y, ref=1) # Try if it works leaving away abs!\n",
+    "                        # Check whether reference should go in as amplitude or power!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to spectogram \n",
+    "Y = librosa.stft(y) # Fourrier spectrum - should have amplitude and phase components for each bins\n",
+    "Y_power=abs(Y)**2 # To get powers we need to square the Fourrier spectrum and to get rid phase component we take the absolute value\n",
+    "#This should result in the power spectrum (Pa**2)\n",
+    "\n",
+    "#To convert it to power density spectrum (Pa**2/Hz) we divide it by the width of the frequency bins\n",
+    "\n",
+    "# We usually don't plot in Pa**2/Hz. Instead we want a logarithmic scale. Divide it by the reference value. \n",
+    "# dB - for power values (for amplitude value is is squared!)\n",
+    "\n",
+    "\n",
+    "# \n",
+    "\n",
+    "\n",
+    "\n",
+    "#Ydb = librosa.amplitude_to_db(abs(Y))\n",
+    "\n",
+    "\n",
+    "## Ultimately, we want a power density spectrum! \n",
+    "\n",
+    "#Units(dBa relative to 1 uPa**2/Hz)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Power spectrum vs amplitude\n",
+    "2017: signal is +-1 Volt data (what comes out of the amplifier)\n",
+    "2020: Calibrate: unit for sound is Pascal, in air the reference level is 20uPa, and in water it is 1uP. \n",
+    "\n",
+    "Power(density)= amplitude**2\n",
+    "nfft= \n",
+    "\n",
+    "Power spectrum (P**2)\n",
+    "\n",
+    "reference value \n",
+    "\n",
+    "2015-11-10--15-25.wav: 96kHz, 24bit \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-27.377338 , -27.377338 , -27.377338 , ..., -27.377338 ,\n",
+       "        -27.377338 , -24.385162 ],\n",
+       "       [-27.377338 , -27.377338 , -27.377338 , ..., -27.377338 ,\n",
+       "        -27.377338 , -20.75101  ],\n",
+       "       [-27.377338 , -27.377338 , -27.377338 , ...,  -7.7992635,\n",
+       "         -9.980928 , -13.668762 ],\n",
+       "       ...,\n",
+       "       [-27.377338 , -27.377338 , -27.377338 , ..., -27.377338 ,\n",
+       "        -27.377338 , -27.377338 ],\n",
+       "       [-27.377338 , -27.377338 , -27.377338 , ..., -27.377338 ,\n",
+       "        -27.377338 , -27.377338 ],\n",
+       "       [-27.377338 , -27.377338 , -27.377338 , ..., -27.377338 ,\n",
+       "        -27.377338 , -27.377338 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ydb"
    ]
   },
   {
@@ -173,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +293,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Whiten? (extract average background noise for each buffer)\n",
+    "#Whitening? (extract average background noise for each buffer)\n",
+    "# For each frequency bin, take the median (take the 10%th signal), frequency gain correction\n",
     "mean_values=pd.DataFrame(Ydb_norm).mean()\n",
     "Ydb_norm_w=np.array(pd.DataFrame(Ydb_norm).apply(lambda x: x-mean_values, axis=1))"
    ]
@@ -249,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,13 +413,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c729669cec7455b97d1ed2fb9ad4241",
+       "model_id": "2c03bc4be8ce4118863b9d0270b44244",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,27 +433,34 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x1344ee370>"
+       "<matplotlib.colorbar.Colorbar at 0x136279940>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Plot spectrogram\n",
-    "plt.figure(figsize=(150, 5))\n",
+    "plt.figure(figsize=(200, 5))\n",
     "# tell mpl_connect we want to pass a 'button_press_event' into onclick when the event is detected\n",
     "plt.gcf().canvas.mpl_connect('key_press_event', onclick)\n",
-    "librosa.display.specshow(Ydb_norm, cmap='seismic', sr=sr, x_axis='time', y_axis='hz')\n",
-    "plt.xticks(np.arange(0, len(Ydb_norm)+1, 10))\n",
+    "librosa.display.specshow(Ydb, cmap='seismic', sr=sr, x_axis='time', y_axis='hz')\n",
+    "plt.xticks(np.arange(0, len(Ydb)+1, 10))\n",
     "plt.colorbar()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -379,27 +492,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>12.761527</td>\n",
-       "      <td>15.393785</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/whale_cropped_t...</td>\n",
+       "      <td>842.037650</td>\n",
+       "      <td>844.909211</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>39.193785</td>\n",
-       "      <td>44.019592</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/whale_cropped_t...</td>\n",
+       "      <td>849.358617</td>\n",
+       "      <td>851.250553</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>856.731960</td>\n",
+       "      <td>858.586944</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>870.880829</td>\n",
+       "      <td>872.443733</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>879.143507</td>\n",
+       "      <td>881.162606</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>926.733573</td>\n",
+       "      <td>929.410736</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>952.981367</td>\n",
+       "      <td>955.613625</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>971.885780</td>\n",
+       "      <td>974.929328</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       onset     offset                                           filename\n",
-       "0  12.761527  15.393785  /Users/saroltagabulya/git/Orca/whale_cropped_t...\n",
-       "1  39.193785  44.019592  /Users/saroltagabulya/git/Orca/whale_cropped_t..."
+       "        onset      offset                                           filename\n",
+       "0  842.037650  844.909211  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
+       "1  849.358617  851.250553  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
+       "2  856.731960  858.586944  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
+       "3  870.880829  872.443733  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
+       "4  879.143507  881.162606  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
+       "5  926.733573  929.410736  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
+       "6  952.981367  955.613625  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
+       "7  971.885780  974.929328  /Users/saroltagabulya/git/Orca/2017-02-04--10-..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,25 +564,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Make sure to save time_stamps as csv by clicking s on graph!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
