adding spectogram split incase file is too long

--- a/Crop_wav.ipynb
+++ b/Crop_wav.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c884667ef3724ac5b4dc37fa9b4c680f",
+       "model_id": "4a96ce1a917c46398ff11f739ba6a25d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='CSV files:', options=(), value=None)"
+       "Dropdown(description='CSV files:', options=('timestamp_csv/time_stamps_2017-02-04--10-14-06--00-16-35--BC.csv'…"
       ]
      },
      "metadata": {},
@@ -53,8 +53,8 @@
     }
    ],
    "source": [
-    "directory='/Users/saroltagabulya/git/Orca/timestamp_csv'\n",
-    "wavs=glob.glob('*.csv')\n",
+    "directory='/Users/saroltagabulya/git/Orca/'\n",
+    "wavs=glob.glob('timestamp_csv/*.csv')\n",
     "file=[]\n",
     "\n",
     "dropdown=widgets.Dropdown(\n",
@@ -112,23 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please check sampling rate manually in the metadata file and set below in Hz! \n",
-      "100000\n",
-      "Please check reference value in the files README and set below in uPa! \n",
-      "0\n",
-      "Please check calibration value in the files README and set below! \n",
-      " what does the fullscale voltage correspond to in Pa? \n",
-      " 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set sample rate\n",
     "try:\n",
@@ -141,7 +127,11 @@
     "ref_value=int(input('Please check reference value in the files README and set below in uPa! \\n'))\n",
     "\n",
     "# Calibration value\n",
-    "cal_value=int(input('Please check calibration value in the files README and set below! \\n what does the fullscale voltage correspond to in Pa? \\n '))\n"
+    "cal_value=int(input('Please check calibration value in the files README and set below! \\n what does the fullscale voltage correspond to in Pa? \\n '))\n",
+    "\n",
+    "\n",
+    "# Set researcher\n",
+    "researcher= input('Please indicate the researcher who performs the crop by initials [SG, JR] \\n ')"
    ]
   },
   {
